# fetter-py

./: Cargo.toml  README.md  pyproject.toml  update.py
.github/workflows/: ci.yml  version.py  version.yml
doc/: notes.txt
src/: lib.rs
test/: test_cli.py
