[build-system]
requires = ["maturin==1.7.4"]
build-backend = "maturin"

[project]
name = "fetter"
dynamic = ["version"]
description = "System-wide Python package discovery and validation."

authors = [{name = "Christopher Ariza"}]
maintainers = [{name = "Christopher Ariza"}]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
]

keywords = ["package", "allow-listing"]


[project.urls]
Homepage = "https://github.com/fetter-io/fetter-py"
Repository = "https://github.com/fetter-io/fetter-py.git"
Issues = "https://github.com/fetter-io/fetter-py/issues"

[tool.maturin]
features = ["pyo3/extension-module"]

[project.scripts]
fetter = "fetter:run_with_argv"


